src/css/styles.css
html,
body {
    margin: 0;
    height: 100%;
    padding: 0;
    width: 100%;
    flex-direction: column;
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #313639;
    user-select: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
}

.info {
    display: flex;
    gap: 3px;
}

.info__container {
    font-size: 1rem;
    background-color: #232628;
    padding: 5px 20px;
    border-radius: 5px;
    color: #fff;
    text-align: center;
    font-weight: 800;
    margin-bottom: 10px;
    display: flex;
    gap: 3px;
    flex-direction: column;
    justify-content: center;
}

.info__container div {
    display: flex;
    justify-content: center;
    align-items: center;
}

.info__container img {
    height: 20px;
    margin-right: 5px;
}

.info__container:nth-child(1) .info__title {
    color: #A85C2E;
}

.info__container:nth-child(2) .info__title {
    color: #6B69AD;
}

.info__container:nth-child(3) .info__title {
    color: #6D8D75;
}

.game__header {
    display: flex;
    align-items: center;
    justify-content: center;
}

.game__header img {
    width: 50px;
    height: 50px;
}

.boost-menu__balance,
.game__score {
    color: #fff;
    text-align: center;
    font-size: 36px;
    font-weight: 800;
    margin-left: 5px;
    user-select: none;
    -webkit-user-drag: none;
    -moz-user-select: none;
    -ms-user-select: none;
}



.game__clicker-circle {
    position: relative;
    padding: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #232628;
    margin-top: 20px;
    width: 250px;
    height: 250px;
    border-radius: 50%;
    box-shadow: 0px 0px 16px 0px rgba(138, 143, 254, 0.05);
    transition: transform 0.2s ease;
    --tiltX: 0deg;
    --tiltY: 0deg;
    transform: rotateX(var(--tiltX)) rotateY(var(--tiltY));
    user-select: none;
    -webkit-user-drag: none;
    -moz-user-select: none;
    -ms-user-select: none;
}


.game__clicker-circle img {
    width: 200px;
    height: 200px;
    border-radius: 50%;
    user-select: none;
    -webkit-user-drag: none;
    -moz-user-select: none;
    -ms-user-select: none;
}

.game {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.game__footer {
    margin-top: 20px;
    display: flex;
    justify-content: space-between;
    width: 100%;
}

.boost {
    display: flex;
    gap: 10px;
    cursor: pointer;
    justify-content: center;
    align-items: center;
    color: #fff;
    text-align: center;
    font-size: 24px;
    font-weight: 800;
}

.boost-menu__close-btn,
.boost-menu__close-btn img {
    background-color: transparent;
    max-width: 40px;
    max-height: 40px;
}

.boost-menu__title {
    color: #fff;
    text-align: center;
    font-size: 36px;
    font-weight: 800;
    margin-left: 5px;
}

.boost-menu__header {
    display: flex;
    align-items: center;
    gap: 20px;
    flex-direction: column;
}

.boost-menu__balance-container img {
    max-width: 50px;
    max-height: 50px;
}

.boost-menu__balance-container {
    display: flex;
    align-items: center;
}

.boost-menu__bosters {
    width: 100%;
    display: flex;
    gap: 5px;
    flex-direction: column;
}

.boost-menu__boost {
    display: flex;
    align-items: center;
    position: relative;
    gap: 10px;
    background-color: #53575a;
    padding: 40px 20px 40px 20px;
    border-radius: 20px;
    width: 100%;
}

.boost-menu__boost h3 {
    color: #fff;
    font-size: 24px;
    font-weight: 800;
    margin-bottom: 5px;
}

.boost-menu__boost h5 {
    color: #929090;
    font-size: 20px;
}

.boost-menu__boost__energy.disabled {
    opacity: 0.5;
    pointer-events: none;
}

.boost-menu__content {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 100%;

}

.boost-menu__bosters__free {
    margin-bottom: 150px;
}

#energy-timer {
    position: absolute;
    color: #fff;
    top: 50%;
    left: 70%;

    transform: translate(-50%, -50%);
    font-size: 24px;
    font-weight: 800;
}

.boost-menu__boost div h5 {
    display: flex;
    align-items: center;
    font-weight: 800;
}

.boost-menu__bosters__upgrade .boost-menu__boost {
    display: flex;
    justify-content: space-between;
}

.boost-menu__bosters__upgrade .boost-menu__boost div {
    display: flex;
    flex-direction: row;
    gap: 10px;
}

.boost-menu__bosters__upgrade .boost-menu__boost div div {
    display: flex;
    flex-direction: column;
    gap: 0px;
}

.boost-menu__bosters .boost-menu__boost button,
.boost-menu__bosters .boost-menu__boost button img {
    background-color: transparent;
    max-width: 40px;
    max-height: 40px;
}




.boost-menu__bosters h4 {

    color: #fff;
    font-size: 36px;
    font-weight: 800;

}


.boost-menu {
    position: fixed;
    flex-direction: column;
    margin: 0;
    height: 100%;
    padding: 0;
    width: 100%;
    display: block;
    z-index: 999;
    padding: 20px;
    background-color: #313639;
    overflow: hidden;
    transition: visibility 0.3s, opacity 0.2s ease-in-out;
    visibility: hidden;
    opacity: 0;
}

.boost-menu.active {
    visibility: visible;
    opacity: 1;
}

.upgrade-menu {
    position: fixed;
    bottom: -100%;
    left: 0;
    right: 0;
    background: #53575a;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2);
    transition: bottom 0.3s;
    z-index: 1000;
}

.upgrade-menu.active {
    bottom: 0;
}

.upgrade-menu__content {
    color: #fff;
    padding: 20px;
    display: flex;
    font-size: 2rem;
    font-weight: 800;
    flex-direction: column;
    gap: 10px;
    align-items: center;
    text-align: center;
}

.upgrade-menu__title {
    font-weight: 800;
    font-size: 2.5rem;
}

.upgrade-menu__description {
    font-weight: 400;
}

.upgrade-menu__button {
    font-size: 1.5rem;
    font-weight: 800;
    background-color: #405cf5;
    border-radius: 6px;
    box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset, rgba(50, 50, 93, .1) 0 2px 5px 0, rgba(0, 0, 0, .07) 0 1px 1px 0;
    color: #fff;
    cursor: pointer;
    height: 44px;
    margin: 12px 0 0;
    padding: 0 25px;
    transition: all .2s, box-shadow .08s ease-in;
    user-select: none;
    -webkit-user-select: none;
    touch-action: manipulation;
}

.upgrade-menu__button:focus {
    box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset, rgba(50, 50, 93, .2) 0 6px 15px 0, rgba(0, 0, 0, .1) 0 2px 2px 0, rgba(50, 151, 211, .3) 0 0 0 4px;
}


.upgrade-menu__content img {
    height: 150px;
}


.upgrade-menu__content h5 {
    display: flex;
    justify-content: center;
    align-items: center;
}

.upgrade-menu__content button {
    padding: 10px 20px;
    margin-top: 20px;
    cursor: pointer;
}

.close-btn {
    position: absolute;
    top: 10px;
    right: 10px;
    background: none;
    border: none;
    font-size: 24px;
    cursor: pointer;
}


/* Animation +1 */


.plusCoins {
    position: absolute;
    font-family: Inter;
    text-shadow: 0px 0px 4px rgba(234, 182, 64, 0.25);
    font-size: 24px;
    font-weight: 800;
    background: linear-gradient(180deg, #47cbe8 0%, #2b5cef 100%);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    pointer-events: none;
    user-select: none;
    animation: move-up 2s forwards;
}

.energy {
    display: flex;
    align-items: center;
    gap: 5px;
    color: #fff;
    text-align: center;
    font-size: 24px;
    font-weight: 800;

}



@keyframes move-up {
    0% {
        opacity: 1;
        transform: translateY(0);
    }

    100% {
        opacity: 0;
        transform: translateY(-50px);
    }
}

@media (max-width: 480px) {
    .info__container {
        font-size: 0.9rem;
    }
}

@media (max-width: 380px) {
    .info__container {
        font-size: 0.8rem;
    }
}

@media (max-width: 350px) {
    .info__container {
        font-size: 0.7rem;
    }
}

@media (max-width: 320px) {
    .info__container {
        font-size: 0.6rem;
    }
}

